<resources>
    <string name="app_name">SymmetricSplits</string>
    <string name="action_settings">Settings</string>
    <string name="CompoundExercise">Compound Exercise</string>
    <string name="HeavyHyperTrophy">Heavy Hypertrophy</string>
    <string name="fourSetOfTwenty">4Sets*20Reps</string>
    <string name="save">Save</string>
    <string name="addExercise">ADD Exercise</string>
    <string name="back">BACK</string>
    <string name="add">ADD</string>
    <string name="InsertHint">Insert Exercise Here</string>
    <string name="RemoveExercise">Remove Exercise</string>
    <string name="viewSavedWorkout">Saved Workouts</string>
    <string name="next">Next</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_activity_video_chat">Video Call</string>
    <string name="title_activity_incoming_call">Incoming Call</string>
    <string name="make_call">Make a call</string>
    <string name="receive_call">Ready to receive a call!</string>

    <string name="title_activity_login">Login</string>
    <string name="login">Choose a username:</string>
    <string name="username">Username</string>
    <string name="login_submit">Sign in!</string>

    <string name="enter_new_channel">Enter new channel:</string>
    <string name="action_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_number">Enter a number...</string>
    <string name="title_activity_saved_workoutview">savedWorkoutview</string>
    <string name="share_exercise_button">share exercise Button</string>
    <string name="delete_saved_exercise_from_data">delete saved exercise from data</string>
    <string name="delete">Delete</string>
    <string name="hint">searchHint</string>
    <string name="Workout_Duration">Workout Duration</string>
    <string name="Body_Group">Body Group</string>
</resources>
