<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LiftingActivity"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:background="@color/Black"
        android:id="@+id/mainLinearLayout"
        android:padding="10dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/headerLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/dayTextview"
                android:gravity="center"
                android:background="#ff0000"

                android:foregroundTint="#372c2c"
                android:layout_marginTop="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/compoundExerciseLayout"
            android:layout_marginBottom="23dp"

            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/CompoundExercise"
                android:id="@+id/textView2"
                android:background="#302019"
                android:textColor="#ff0000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/compoudExerciseEdittext"
                android:background="@android:color/white"
                android:capitalize="words"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:visibility="visible"
                android:hint ="@string/InsertHint"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/firstHeavyHypertophyLayout"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/HeavyHyperTrophy"
                android:id="@+id/textView3"
                android:background="#302019"
                android:textColor="#ff0000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstHeavyHypertrophy"
                android:background="@android:color/white"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:visibility="visible"
                android:hint ="@string/InsertHint"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/secondHeavyHyperTrophyLayout"
            android:layout_marginBottom="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/HeavyHyperTrophy"
                android:id="@+id/textView4"
                android:background="#302019"
                android:textColor="#ff0000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:visibility="visible"
                android:hint ="@string/InsertHint"
                android:id="@+id/secondHeavyHypertrophy"
                android:background="@android:color/white"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstFourSetsOfTwentLayout"
            android:layout_marginBottom="19dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fourSetOfTwenty"
                android:id="@+id/textView8"
                android:background="#302019"
                android:textColor="#ff0000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:visibility="visible"
                android:hint ="@string/InsertHint"
                android:id="@+id/fourSetOfTwenty"
                android:background="@android:color/white"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/secondFourSetsOfTwentyLayout"
            android:layout_marginBottom="21dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/fourSetOfTwenty"
                android:id="@+id/textView12"
                android:background="#302019"
                android:textColor="#ff0000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:visibility="visible"
                android:hint ="@string/InsertHint"
                android:id="@+id/secondfourSetsOfTwenty"
                android:background="@android:color/white"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:measureWithLargestChild="true"
            android:id="@+id/linearLayout"
            android:weightSum="1"
            android:orientation="horizontal"
            android:layout_gravity="right">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RemoveExercise"
                android:id="@+id/removeExercise"
                android:textAlignment="center"
                android:textColor="#080808"
                android:textColorHighlight="#230707"
                android:textSize="12sp"
                android:background="#ff0000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="left"
                android:textAppearance="@style/AppTheme" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addExercise"
                android:id="@+id/addExercise"
                android:textAlignment="center"
                android:textColor="#080808"
                android:textColorHighlight="#230707"
                android:textSize="12sp"
                android:background="#ff0000"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="110dp"
                android:layout_gravity="right"
                android:textAppearance="@style/AppTheme" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:textAlignment="center"
            android:textColor="#080808"
            android:textColorHighlight="#230707"
            android:textSize="12sp"
            android:background="#ff0000"
            android:layout_marginLeft="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/AppTheme" />






    </LinearLayout>

</ScrollView>